Fix about section image overflow

--- a/index/index.css
+++ b/index/index.css
@@ -9,6 +9,7 @@ html, body {
     scroll-behavior: smooth;
     min-height: 100%;
     overflow-x: hidden;
+
 }
 
 body {
@@ -37,9 +38,7 @@ body {
     padding: 20px;
 }
 
-.header-buttons {
-    margin-right: 20px;
-}
+.header-buttons {margin-right: 20px;}
 
 .header-buttons a {
     background-color: transparent;
@@ -101,25 +100,25 @@ body {
 
 .dropdown:hover .dd-content {display: block; opacity: 1;}
 
-#order-btn {
+.order-btn {
     background-color: var(--volcano-gold);
     border-radius: 15px;
-    padding: 5px 15px;
+    padding: 12px 20px;
     font-size: 18px;
     border: none;
-    color: white;
     cursor: pointer;
-    min-height: 40px; min-width: 110px;
+    color: white;
+    text-decoration: none;
+    min-width: 100px;
     transition-duration: 0.3s;
 }
 
-#order-btn:hover {
+.order-btn:hover {
     background-color: var(--hover-gold);
     border-radius: 8px;
 }
 
-
-#hero {
+.hero {
     display: flex; flex-direction: column;
     justify-content: center;
     z-index: -1;
@@ -127,7 +126,7 @@ body {
     height: 100vh;
 }
 
-#hero-video {
+.hero-video {
     position: absolute;
     top: 0; right: 0; bottom: 0; left: 0; opacity: 0.4;
     min-height: 100vh; min-width: 1100px;
@@ -135,7 +134,7 @@ body {
     z-index: -1;
 }
 
-#hero-content {
+.hero-content {
     display: flex; flex-direction: column;
     position: relative;
     margin-bottom: 160px; margin-left: 30px; margin-right: 30px;
@@ -143,7 +142,7 @@ body {
     color: var(--volcano-gold);
 }
 
-#hero-content > .logo {
+.hero-content > .logo {
     width: 100%; height: auto; max-width: 600px;
     margin-bottom: 40px; margin-top: 120px;
     filter: drop-shadow(5px 5px 0.75rem black);
@@ -152,28 +151,28 @@ body {
 #about {
     display: flex;
     align-items: center; justify-content: center;
-    width: 100%; height: 100vh;
+    width: 100%; min-height: 100vh;
     background-color: var(--alt-color);
 }
 
 .about-content {
-    display: flex; flex-direction: column;
+    display: flex; flex-direction: column; flex-wrap: wrap;
     align-items: center; justify-content: center;
     max-width: 540px;
     font-size: 18px;
     margin: 80px;
 }
 
-.about-content h1 {font-size: 28px; color: var(--volcano-gold);}
+.about-content h1 {font-size: calc(20px + 1vw); color: var(--volcano-gold);}
 
 .about-content img {
-    max-width: 540px;
-    margin: 20px;
+    width: 100%;
+    margin-top: 20px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.8);
 }
 
-.contact {
-    width: 100%; min-height: 500px;
+#contact {
+    width: 100%; min-height: 100vh;
     background-color: var(--main-color);
 }
 
